<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string translatable="false" name="_99">99</string>
    <string translatable="false" name="_date">2015-01-01</string>
    <string name="about">About</string>
    <string name="open_source_licences">Open-source licences</string>
    <string name="open_source_licences_details">Licence details for open-source software</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">File Upload</string>
    <string name="add_comment_dlg_message">Write a short note for yourself so you don\'t forget the details of the shave</string>
    <string name="add_comment_dlg_ok">OK, save it!</string>
    <string name="add_comment_dlg_title">Add a note</string>
    <string name="app_name">Blade Reminder</string>
    <string name="arrow">An arrow pointing to the list view to tap</string>
    <string name="backup">Backup</string>
    <string name="colours_enabled">Colours Enabled</string>
    <string name="colours_enabled_summary">Show a purple, white, blue, green, yellow, orange or red background as the blade loses sharpness</string>
    <string name="commentText">Comment goes here</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Details of recent changes</string>
    <string translatable="false" name="countLabelText">99</string>
    <string name="countLabel">Uses</string>
    <string name="dark">Dark</string>
    <string name="dateLabelString">Date</string>
    <string name="dateLabel">When</string>
    <string name="delete_title">Remove this day\'s details</string>
    <string name="deleted">Deleted</string>
    <string name="display_settings">Display Settings</string>
    <string name="dont_show_this_anymore">Don\'t show this dialog again</string>
    <string name="editentry">Edit shave details</string>
    <string name="format_date">Format Date</string>
    <string name="start_import">Start importing</string>
    <string name="cancel_import">Cancel</string>
    <string name="import_activity_name">Import External Data</string>
    <string name="import_text_help">You can import data from a file containing comma separated values. These should be the date, the shave count, any comments and optionally the name of the razor used. I\'ll try to do my best to resolve conflicts.</string>
    <string name="light">Light</string>
    <string name="modify_done">All done</string>
    <string name="modify_name">Edit Shave Details</string>
    <string name="newblade">New blade</string>
    <string name="notesLabel">Notes</string>
    <string name="nothing_to_share">No entries to share</string>
    <string name="nothing_to_share_to">Nothing to share to</string>
    <string name="onemore">One more use</string>
    <string name="shave_file_backup">Shave file backup</string>
    <string name="shaves_csv">spreadsheets/shaves.csv</string>
    <string name="show_comment_dialog">Show Comment Dialog</string>
    <string name="sounds_enabled">Sounds Enabled</string>
    <string name="sounds_enabled_summary">Play an annoying sound when you perform certain actions</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Change the overall theme</string>
    <string name="title_activity_help">Getting Started</string>
    <string name="title_settings">Settings</string>
    <string name="today">Today</string>
    <string name="bladeicon">Blade Icon</string>
    <string name="unable_to_create_file">Unable to create new file</string>
    <string name="undo">Undo</string>
    <string name="with_template">With the template %s</string>
    <string name="yesterday">Yesterday</string>
    <string name="sharpness_range">Sharpness Range</string>
    <string name="sharpness_range_summary">Configure the range of values for sharpness colours, currently from %1$s to %2$s</string>

    <string name="action_stats">Stats</string>
    <string name="average_uses">Average Uses</string>
    <string name="max_uses">Highest Uses</string>
    <string name="stats_since">Statistics since</string>
    <string name="never">Never!</string>

    <string name="not_enough_entries">Not enough entries yet</string>

    <string name="action_new_razor">Add Razor</string>
    <string name="action_modify_razor">Edit Razor Name</string>
    <string name="action_delete_razor">Delete Razor</string>
    <string name="add_razor_dlg_title">Add a new razor</string>
    <string name="add_razor_dlg_message">Give the razor a nick name to make keeping track of multiple razors a bit easier</string>
    <string name="add_razor_dlg_ok">Add this razor</string>

    <string name="edit_razor_dlg_title">Change razor name</string>
    <string name="edit_razor_dlg_message">Change the name given to this razor</string>
    <string name="edit_razor_dlg_ok">Save the change</string>

    <string name="razorLabel">Razor Used</string>

</resources>
