<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <!-- column headings -->
        <TextView android:id="@+id/column_header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/dateLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView android:id="@+id/column_header2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/countLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView android:id="@+id/column_header3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/notesLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
</LinearLayout>
