<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="horizontal">

    <es.quirk.bladereminder.widgets.DateLabel
        android:id="@+id/date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="left"
        android:text="@string/dateLabelString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <es.quirk.bladereminder.widgets.UsesView
        android:id="@+id/count_label"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/countLabelText"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/comment"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:textStyle="italic"
        android:text="@string/commentText"
        android:paddingBottom="2dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/razor"
        android:visibility="gone"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_weight="0" />

</LinearLayout>
