<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/toolbar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/importTextHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_text_help" />

            <Button
                android:id="@+id/run_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_import"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Button
                android:id="@+id/cancel_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_import"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
</LinearLayout>
