<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <include layout="@layout/toolbar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dateLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/countLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <NumberPicker
                android:id="@+id/shaveUsageText"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <es.quirk.bladereminder.widgets.UsesView
                android:id="@+id/usesDisplay"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/_99"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/notesLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notesLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?attr/colorPrimary"
            />

        <EditText
            android:id="@+id/shaveCommentField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:hint="@string/notesLabel"
            >

            <requestFocus />
        </EditText>

    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
</LinearLayout>
